<resources>
    <string name="app_name">Tiket Saya</string>
    <string name="slogan">Wisata jadi lebih asyik!</string>
    <string name="logo">logo</string>
    <string name="slogan2">Discover \nThe Beauty \nof Earth</string>
    <string name="emblem">emblem</string>
    <string name="sign_in">SIGN IN</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="logo2">logo2</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="form_text">Please fill up the forms below \nfor informations</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="full_name_label">Full Name</string>
    <string name="email_address_label">Email Address</string>
    <string name="email_hint">Email@gmail.com</string>
    <string name="no_telephone">Phone Number</string>
    <string name="register">REGISTER</string>
    <string name="button_back">Button Back</string>
    <string name="tombol_plus">+</string>
    <string name="explore_now">EXPLORE NOW</string>
    <string name="congratulation">Congratulation</string>
    <string name="slogan_success">Welcome in Tiket Saya \nand Enjoy your Holiday</string>
    <string name="logosuccess">logosuccess</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="main_menu">Main Menu</string>
    <string name="slogan_menu">Explore the beauty of world</string>
    <string name="pisa_label">Pisa</string>
    <string name="torri_label">Torri</string>
    <string name="pagoda_label">Pagoda</string>
    <string name="borobudur_label">Candi</string>
    <string name="sphinx_label">Sphinx</string>
    <string name="monas_label">Monas</string>
    <string name="logopisa">logoPisa</string>
    <string name="logotorri">logoTorri</string>
    <string name="logopagoda">logoPagoda</string>
    <string name="logoborobudur">logoBorobudur</string>
    <string name="logosphinx">logoSphinx</string>
    <string name="logomonas">logomonas</string>
    <string name="slogan_tips">Learn it for many benefits</string>
    <string name="ticket_tips">Ticket Tips</string>
    <string name="item_one">Item One</string>
    <string name="item_two">Item Two</string>
    <string name="background_detail">Background Detail</string>
    <string name="info">Information</string>
    <string name="info_detail">Knowing before travel</string>
    <string name="logo_spot_photo">Logo Spot Photo</string>
    <string name="logo_spot_wifi">Logo Spot Wifi</string>
    <string name="logo_festival">Logo Festival</string>
    <string name="spot_photo_desc">Tripod Everywhere</string>
    <string name="wifi_desc">Connect for any Tourist</string>
    <string name="festival_desc">Dance and Foods</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="logo_buy_ticket">Logo Buy Ticket</string>
    <string name="ticket_detail">Ticket Detail</string>
    <string name="ticket_info">Check the amount of tickets</string>
    <string name="pricing">Pricing</string>
    <string name="total_price">Total Price</string>
    <string name="pay_now">Pay Now</string>
    <string name="selamat_menikmati">Selamat Menikmati</string>
    <string name="view_ticket">View Ticket</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_ticket">My Ticket</string>
    <string name="my_ticket_desc">Explore beauty world</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="barcode">Barcode</string>
    <string name="edit_info">We highly suggest you to use the correct informations</string>
    <string name="phone_number_hint">0867xxxxxxx</string>
    <string name="save_profile">Save Profile</string>
    <string name="uang_anda_tidak_cukup">Uang anda tidak cukup</string>
    <string name="user_money_subtitle">Your current balance</string>
    <string name="success_subtitle">Anda berhasil membeli tiket \ndan selamat berlibur</string>
    <string name="refund_now">Refund Now</string>
</resources>