<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".ProfileActivity">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/bg_gradient_primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/button_back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="108dp"
        android:layout_marginTop="24dp"
        android:layout_height="108dp"
        android:background="@drawable/bg_view_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo_profile"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:contentDescription="@string/photo_profile"
        android:src="@drawable/icon_nopic"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="@+id/view1"
        app:layout_constraintStart_toStartOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <TextView
        android:id="@+id/fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/full_name_label"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view1"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="@+id/view1"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/user_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/mlight"
        android:text="@string/username_label"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="@+id/fullname"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/fullname"
        app:layout_constraintTop_toBottomOf="@+id/fullname"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_number">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mmedium"
            android:text="@string/my_ticket"
            android:textColor="@color/blackPrimary"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/mlight"
            android:text="@string/my_ticket_desc"
            android:textColor="@color/greyPrimary"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#EDEDED" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_mytickets"
            android:layout_width="match_parent"
            android:layout_height="130dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_btn_green_primary"
        android:text="@string/pay_now"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_btn_blue_primary"
        android:text="@string/edit_profile"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_btn_white_primary"
        android:text="@string/sign_out"
        android:textColor="@color/greyPrimary"
        app:layout_constraintEnd_toEndOf="@+id/btn_edit_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_profile" />


</androidx.constraintlayout.widget.ConstraintLayout>