<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:background="@drawable/bg_gradient_primary_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/mregular"
                android:text="@string/my_dashboard"
                android:textColor="#FFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view1"
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_view_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_photo"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:contentDescription="@string/photo_profile"
                android:src="@drawable/icon_nopic"
                app:layout_constraintBottom_toBottomOf="@+id/view1"
                app:layout_constraintEnd_toEndOf="@+id/view1"
                app:layout_constraintStart_toStartOf="@+id/view1"
                app:layout_constraintTop_toTopOf="@+id/view1" />

            <TextView
                android:id="@+id/fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#FFF"
                android:fontFamily="@font/mmedium"
                android:textSize="16sp"
                android:layout_marginLeft="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/view1"
                app:layout_constraintStart_toEndOf="@+id/view1"
                app:layout_constraintTop_toTopOf="@+id/view1"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginStart="12dp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/mlight"
                android:layout_marginBottom="16dp"
                android:textColor="#FFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/view1"
                app:layout_constraintStart_toEndOf="@+id/view1"
                app:layout_constraintTop_toTopOf="@+id/fullname"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/user_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/mmedium"
                android:textColor="@color/greenPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.418"
                app:layout_constraintStart_toEndOf="@+id/fullname"
                app:layout_constraintTop_toTopOf="@+id/view1" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/bg_layout_white"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:paddingRight="24dp"
                android:paddingLeft="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.604"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu"
                    android:textColor="@color/blackPrimary"
                    android:fontFamily="@font/mmedium"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/slogan_menu"
                    android:textColor="@color/greyPrimary"
                    android:textSize="14sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="#EDEDED"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/btn_ticket_pisa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/icon_pisa"
                            android:contentDescription="@string/logopisa" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pisa_label"
                            android:textColor="@color/blackPrimary"
                            android:layout_marginTop="4dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/mmedium"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_ticket_torri"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/icon_torri"
                            android:contentDescription="@string/logotorri" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/torri_label"
                            android:textColor="@color/blackPrimary"
                            android:layout_marginTop="4dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/mmedium"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_ticket_pagoda"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/icon_pagoda"
                            android:contentDescription="@string/logopagoda"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pagoda_label"
                            android:textColor="@color/blackPrimary"
                            android:layout_marginTop="4dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/mmedium" />

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/btn_ticket_candi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/icon_borobudur"
                            android:contentDescription="@string/logoborobudur"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/borobudur_label"
                            android:textColor="@color/blackPrimary"
                            android:layout_marginTop="4dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/mmedium"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_ticket_sphinx"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/icon_sphinx"
                            android:contentDescription="@string/logosphinx"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sphinx_label"
                            android:textColor="@color/blackPrimary"
                            android:layout_marginTop="4dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/mmedium"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_ticket_monas"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/icon_monas"
                            android:contentDescription="@string/logomonas"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/monas_label"
                            android:textColor="@color/blackPrimary"
                            android:layout_marginTop="4dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/mmedium"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mmedium"
                android:text="@string/ticket_tips"
                android:textColor="@color/blackPrimary"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mlight"
                android:text="@string/slogan_tips"
                android:textColor="@color/greyPrimary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:scrollbars="none"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:orientation="horizontal"
                    android:paddingRight="24dp">

                    <ImageView
                        android:layout_width="227dp"
                        android:layout_height="98dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:contentDescription="@string/item_one"
                        android:src="@drawable/item_one" />

                    <ImageView
                        android:layout_width="227dp"
                        android:layout_height="98dp"
                        android:contentDescription="@string/item_two"
                        android:src="@drawable/item_two" />

                </LinearLayout>

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>